lstm model updated with weather data

--- a/notebooks/hf-results.ipynb
+++ b/notebooks/hf-results.ipynb
@@ -16486,7 +16486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "lovely-counter",
    "metadata": {},
    "outputs": [],
@@ -16496,7 +16496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "australian-field",
    "metadata": {},
    "outputs": [],
@@ -16507,7 +16507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "color-jenny",
    "metadata": {},
    "outputs": [],
@@ -16517,7 +16517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "narrow-dakota",
    "metadata": {},
    "outputs": [
@@ -16723,7 +16723,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16734,7 +16734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "finite-wichita",
    "metadata": {},
    "outputs": [],
@@ -16744,7 +16744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "passing-concern",
    "metadata": {},
    "outputs": [],
@@ -16754,7 +16754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "least-apollo",
    "metadata": {},
    "outputs": [],
@@ -16764,7 +16764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "ongoing-wisconsin",
    "metadata": {},
    "outputs": [],
@@ -16774,7 +16774,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
+   "id": "prerequisite-disaster",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>cnn-1</th>\n",
+       "      <th>dilation-2</th>\n",
+       "      <th>dilation-3</th>\n",
+       "      <th>dilation-5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>160728.371429</td>\n",
+       "      <td>151911.039514</td>\n",
+       "      <td>136951.519983</td>\n",
+       "      <td>142029.555139</td>\n",
+       "      <td>154962.691858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>166689.189286</td>\n",
+       "      <td>135160.857873</td>\n",
+       "      <td>136029.236780</td>\n",
+       "      <td>138843.844202</td>\n",
+       "      <td>154204.250452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>147175.335714</td>\n",
+       "      <td>136548.098108</td>\n",
+       "      <td>135684.809045</td>\n",
+       "      <td>135422.107873</td>\n",
+       "      <td>162605.117639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>162933.855000</td>\n",
+       "      <td>174222.742639</td>\n",
+       "      <td>149049.055139</td>\n",
+       "      <td>144454.820764</td>\n",
+       "      <td>182452.391077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>179447.513571</td>\n",
+       "      <td>169430.016077</td>\n",
+       "      <td>154219.402795</td>\n",
+       "      <td>156040.602014</td>\n",
+       "      <td>189911.555139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>170105.036429</td>\n",
+       "      <td>168720.285608</td>\n",
+       "      <td>156401.168420</td>\n",
+       "      <td>168850.988733</td>\n",
+       "      <td>215178.883264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>52420.040714</td>\n",
+       "      <td>151121.699670</td>\n",
+       "      <td>143084.123498</td>\n",
+       "      <td>133185.557092</td>\n",
+       "      <td>171406.730920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>30890.923571</td>\n",
+       "      <td>138004.666467</td>\n",
+       "      <td>132703.545373</td>\n",
+       "      <td>137849.803186</td>\n",
+       "      <td>168895.613733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>124078.987857</td>\n",
+       "      <td>136001.557092</td>\n",
+       "      <td>137699.687952</td>\n",
+       "      <td>121560.724084</td>\n",
+       "      <td>164855.652795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>135138.137857</td>\n",
+       "      <td>138406.129358</td>\n",
+       "      <td>144989.887170</td>\n",
+       "      <td>133881.541467</td>\n",
+       "      <td>166990.316858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>152992.575000</td>\n",
+       "      <td>157138.312952</td>\n",
+       "      <td>149858.879358</td>\n",
+       "      <td>144746.371545</td>\n",
+       "      <td>190995.266077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>130977.402857</td>\n",
+       "      <td>159863.242639</td>\n",
+       "      <td>158867.484827</td>\n",
+       "      <td>154889.613733</td>\n",
+       "      <td>177198.875452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>178444.978571</td>\n",
+       "      <td>171223.664514</td>\n",
+       "      <td>159888.363733</td>\n",
+       "      <td>170091.449670</td>\n",
+       "      <td>198502.687952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>151616.468571</td>\n",
+       "      <td>146979.269983</td>\n",
+       "      <td>139870.922327</td>\n",
+       "      <td>148990.297327</td>\n",
+       "      <td>181028.250452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>144059.191429</td>\n",
+       "      <td>138801.900842</td>\n",
+       "      <td>136411.443811</td>\n",
+       "      <td>141794.424280</td>\n",
+       "      <td>160609.836389</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           target          cnn-1     dilation-2     dilation-3     dilation-5\n",
+       "0   160728.371429  151911.039514  136951.519983  142029.555139  154962.691858\n",
+       "1   166689.189286  135160.857873  136029.236780  138843.844202  154204.250452\n",
+       "2   147175.335714  136548.098108  135684.809045  135422.107873  162605.117639\n",
+       "3   162933.855000  174222.742639  149049.055139  144454.820764  182452.391077\n",
+       "4   179447.513571  169430.016077  154219.402795  156040.602014  189911.555139\n",
+       "5   170105.036429  168720.285608  156401.168420  168850.988733  215178.883264\n",
+       "6    52420.040714  151121.699670  143084.123498  133185.557092  171406.730920\n",
+       "7    30890.923571  138004.666467  132703.545373  137849.803186  168895.613733\n",
+       "8   124078.987857  136001.557092  137699.687952  121560.724084  164855.652795\n",
+       "9   135138.137857  138406.129358  144989.887170  133881.541467  166990.316858\n",
+       "10  152992.575000  157138.312952  149858.879358  144746.371545  190995.266077\n",
+       "11  130977.402857  159863.242639  158867.484827  154889.613733  177198.875452\n",
+       "12  178444.978571  171223.664514  159888.363733  170091.449670  198502.687952\n",
+       "13  151616.468571  146979.269983  139870.922327  148990.297327  181028.250452\n",
+       "14  144059.191429  138801.900842  136411.443811  141794.424280  160609.836389"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnn_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "severe-latino",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_exg = pd.read_csv('../fc_results/cnnexg.csv', index_col = [0])+mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "manual-small",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cnn-1</th>\n",
+       "      <th>dilation-2</th>\n",
+       "      <th>dilation-3</th>\n",
+       "      <th>dilation-5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>164571.184045</td>\n",
+       "      <td>178075.219202</td>\n",
+       "      <td>173818.891077</td>\n",
+       "      <td>178941.883264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>142148.986780</td>\n",
+       "      <td>185067.148889</td>\n",
+       "      <td>176836.750452</td>\n",
+       "      <td>184057.328577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>135429.506311</td>\n",
+       "      <td>159192.109827</td>\n",
+       "      <td>154726.879358</td>\n",
+       "      <td>160898.344202</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           cnn-1     dilation-2     dilation-3     dilation-5\n",
+       "0  164571.184045  178075.219202  173818.891077  178941.883264\n",
+       "1  142148.986780  185067.148889  176836.750452  184057.328577\n",
+       "2  135429.506311  159192.109827  154726.879358  160898.344202"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnn_exg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "million-honolulu",
    "metadata": {},
    "outputs": [],
@@ -16784,7 +17056,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
+   "id": "premium-motel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_exg2 = pd.read_csv('../fc_results/wavenetexg.csv', index_col = [0])+mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "becoming-recording",
    "metadata": {},
    "outputs": [],
@@ -16794,7 +17076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "promotional-change",
    "metadata": {},
    "outputs": [
@@ -16804,7 +17086,7 @@
        "25143.60411120129"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16815,7 +17097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "id": "auburn-setup",
    "metadata": {},
    "outputs": [],
@@ -16824,8 +17106,8 @@
     "mase_dic ={}\n",
     "\n",
     "for col in cnn_1.columns[1:]:\n",
-    "    forecasts = cnn_1[col].values\n",
-    "    test_actual = cnn_1['target'].values\n",
+    "    forecasts = cnn_1[col][0:3].values\n",
+    "    test_actual = cnn_1['target'][0:3].values\n",
     "    mase, mase_arr = err.test_errors(train, test_actual, forecasts, 3, 1, denom)\n",
     "    mase_ls_grid1.append(mase)\n",
     "    mase_dic[col] = mase_arr"
@@ -16833,23 +17115,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "public-alberta",
+   "execution_count": 30,
+   "id": "posted-personal",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.9142613469846272, 1.0702972355313567, 0.897085713429305, 1.5606390301189905]"
+       "{'cnn-1': [0.6757570196635202],\n",
+       " 'dilation-2': [0.8740106142471479],\n",
+       " 'dilation-3': [0.7728590931352518],\n",
+       " 'dilation-5': [0.4465071936487011]}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mase_dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "outdoor-extraction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.6757570196635202,\n",
+       " 0.8740106142471479,\n",
+       " 0.7728590931352518,\n",
+       " 0.4465071936487011]"
+      ]
+     },
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mase_ls_grid1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "embedded-agent",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([160728.37142857, 166689.18928571, 147175.33571429])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnn_1['target'][0:3].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "clinical-amateur",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mase_ls_gridexg = []\n",
+    "\n",
+    "for col in cnn_exg.columns:\n",
+    "    forecasts = cnn_exg[col].values\n",
+    "    test_actual = cnn_1['target'][0:3].values\n",
+    "    mase, mase_arr = err.test_errors(train, test_actual, forecasts, 3, 1, denom)\n",
+    "    mase_ls_gridexg.append(mase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cathedral-trunk",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5319953913352041,\n",
+       " 0.6329188300051228,\n",
+       " 0.40818365207441887,\n",
+       " 0.6536408410327524]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mase_ls_gridexg"
    ]
   },
   {
@@ -16869,7 +17239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 41,
    "id": "cordless-smell",
    "metadata": {},
    "outputs": [],
@@ -16878,8 +17248,8 @@
     "# mase_dic ={}\n",
     "\n",
     "for col in cnn_2.columns[1:]:\n",
-    "    forecasts = cnn_2[col].values\n",
-    "    test_actual = cnn_2['target'].values\n",
+    "    forecasts = cnn_2[col][0:3].values\n",
+    "    test_actual = cnn_2['target'][0:3].values\n",
     "    mase, mase_arr = err.test_errors(train, test_actual, forecasts, 3, 1, denom)\n",
     "    mase_ls_grid2.append(mase)\n",
     "    mase_dic[\"wv-\" + col] = mase_arr"
@@ -16887,23 +17257,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 42,
    "id": "beginning-arbor",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.1336574184694015, 1.113065997699313, 1.1555019637917705, 1.2176488214855339]"
+       "[0.29788330951341574,\n",
+       " 0.4123980699808946,\n",
+       " 0.32417530480214324,\n",
+       " 0.38846378473023413]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mase_ls_grid2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "emotional-canvas",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.48976351389843575,\n",
+       " 0.9998236785245584,\n",
+       " 0.27633909427862857,\n",
+       " 0.8246981699117457]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mase_ls_grid2exg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "august-metabolism",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mase_ls_grid2exg = []\n",
+    "# mase_dic ={}\n",
+    "\n",
+    "for col in cnn_exg2.columns:\n",
+    "    forecasts = cnn_exg2[col].values\n",
+    "    test_actual = cnn_2['target'][0:3].values\n",
+    "    mase, mase_arr = err.test_errors(train, test_actual, forecasts, 3, 1, denom)\n",
+    "    mase_ls_grid2exg.append(mase)\n",
+    "#     mase_ls_grid2exg[\"wv-\" + col] = mase_arr"
    ]
   },
   {
