--- a/notebooks/lstm-results-explore.ipynb
+++ b/notebooks/lstm-results-explore.ipynb
@@ -123,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read the files\n",
-    "site_id = 1004972352\n",
+    "site_id = 'grid'\n",
     "fc = []\n",
     "actual = []\n",
     "\n",
-    "for num_iter in range(1, 5):\n",
+    "for num_iter in range(1, 3):\n",
     "    fc_iter = pd.read_pickle(f'../lstm_results/forecast_{site_id}_iteration_{num_iter}') \n",
     "    ac_iter = pd.read_pickle(f'../lstm_results/actual_{site_id}_iteration_{num_iter}') \n",
     "    \n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -176,223 +176,48 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>power</th>\n",
-       "      <th>wind</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>dewPoint</th>\n",
-       "      <th>cloudCover</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>pressure</th>\n",
-       "      <th>uvIndex</th>\n",
-       "      <th>wind_1</th>\n",
-       "      <th>temperature_1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>humidity_13</th>\n",
-       "      <th>pressure_13</th>\n",
-       "      <th>uvIndex_13</th>\n",
-       "      <th>wind_14</th>\n",
-       "      <th>temperature_14</th>\n",
-       "      <th>dewPoint_14</th>\n",
-       "      <th>cloudCover_14</th>\n",
-       "      <th>humidity_14</th>\n",
-       "      <th>pressure_14</th>\n",
-       "      <th>uvIndex_14</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>date_str</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-02-13 07:00:00</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.13</td>\n",
-       "      <td>18.41</td>\n",
-       "      <td>18.10</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>1013.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.07</td>\n",
-       "      <td>19.12</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>1013.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.73</td>\n",
-       "      <td>18.49</td>\n",
-       "      <td>17.52</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>1013.3</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>12.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-02-13 08:00:00</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.07</td>\n",
-       "      <td>19.12</td>\n",
-       "      <td>17.97</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.93</td>\n",
-       "      <td>1013.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.94</td>\n",
-       "      <td>19.64</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>1013.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.51</td>\n",
-       "      <td>19.07</td>\n",
-       "      <td>17.56</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>1013.1</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>8.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-02-13 09:00:00</th>\n",
-       "      <td>104.27</td>\n",
-       "      <td>4.94</td>\n",
-       "      <td>19.64</td>\n",
-       "      <td>17.98</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>1013.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.73</td>\n",
-       "      <td>20.42</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>1013.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.59</td>\n",
-       "      <td>19.50</td>\n",
-       "      <td>17.55</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>1013.4</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>13068.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-02-13 10:00:00</th>\n",
-       "      <td>27.57</td>\n",
-       "      <td>4.73</td>\n",
-       "      <td>20.42</td>\n",
-       "      <td>18.05</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>1013.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.29</td>\n",
-       "      <td>21.64</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>1013.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.82</td>\n",
-       "      <td>20.23</td>\n",
-       "      <td>17.57</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>1013.7</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2788.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-02-13 11:00:00</th>\n",
-       "      <td>1889.83</td>\n",
-       "      <td>4.29</td>\n",
-       "      <td>21.64</td>\n",
-       "      <td>18.28</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>1013.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.27</td>\n",
-       "      <td>23.92</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>1013.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.85</td>\n",
-       "      <td>21.50</td>\n",
-       "      <td>17.71</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>1013.4</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>131494.68</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 106 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       power  wind  temperature  dewPoint  cloudCover  \\\n",
-       "date_str                                                                \n",
-       "2020-02-13 07:00:00     0.00  5.13        18.41     18.10        0.10   \n",
-       "2020-02-13 08:00:00     0.00  5.07        19.12     17.97        0.03   \n",
-       "2020-02-13 09:00:00   104.27  4.94        19.64     17.98        0.02   \n",
-       "2020-02-13 10:00:00    27.57  4.73        20.42     18.05        0.05   \n",
-       "2020-02-13 11:00:00  1889.83  4.29        21.64     18.28        0.08   \n",
-       "\n",
-       "                     humidity  pressure  uvIndex  wind_1  temperature_1  ...  \\\n",
-       "date_str                                                                 ...   \n",
-       "2020-02-13 07:00:00      0.98    1013.3        0    5.07          19.12  ...   \n",
-       "2020-02-13 08:00:00      0.93    1013.2        0    4.94          19.64  ...   \n",
-       "2020-02-13 09:00:00      0.90    1013.3        0    4.73          20.42  ...   \n",
-       "2020-02-13 10:00:00      0.86    1013.5        0    4.29          21.64  ...   \n",
-       "2020-02-13 11:00:00      0.81    1013.6        2    3.27          23.92  ...   \n",
-       "\n",
-       "                     humidity_13  pressure_13  uvIndex_13  wind_14  \\\n",
-       "date_str                                                             \n",
-       "2020-02-13 07:00:00         0.69       1013.0         2.0     6.73   \n",
-       "2020-02-13 08:00:00         0.94       1013.3         0.0     6.51   \n",
-       "2020-02-13 09:00:00         0.91       1013.1         0.0     6.59   \n",
-       "2020-02-13 10:00:00         0.89       1013.4         0.0     6.82   \n",
-       "2020-02-13 11:00:00         0.85       1013.7         0.0     6.85   \n",
-       "\n",
-       "                     temperature_14  dewPoint_14  cloudCover_14  humidity_14  \\\n",
-       "date_str                                                                       \n",
-       "2020-02-13 07:00:00           18.49        17.52           0.39         0.94   \n",
-       "2020-02-13 08:00:00           19.07        17.56           0.21         0.91   \n",
-       "2020-02-13 09:00:00           19.50        17.55           0.19         0.89   \n",
-       "2020-02-13 10:00:00           20.23        17.57           0.26         0.85   \n",
-       "2020-02-13 11:00:00           21.50        17.71           0.28         0.79   \n",
-       "\n",
-       "                     pressure_14  uvIndex_14  \n",
-       "date_str                                      \n",
-       "2020-02-13 07:00:00       1013.3         0.0  \n",
-       "2020-02-13 08:00:00       1013.1         0.0  \n",
-       "2020-02-13 09:00:00       1013.4         0.0  \n",
-       "2020-02-13 10:00:00       1013.7         0.0  \n",
-       "2020-02-13 11:00:00       1013.4         2.0  \n",
-       "\n",
-       "[5 rows x 106 columns]"
+       "                         power\n",
+       "date_str                      \n",
+       "2020-02-13 07:00:00      12.83\n",
+       "2020-02-13 08:00:00       8.70\n",
+       "2020-02-13 09:00:00   13068.87\n",
+       "2020-02-13 10:00:00    2788.11\n",
+       "2020-02-13 11:00:00  131494.68"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +249,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +327,7 @@
        "504"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +347,7 @@
        "504"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +376,7 @@
        "504"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
