CNN new changes added

--- a/notebooks/dnn-results-comparison.ipynb
+++ b/notebooks/dnn-results-comparison.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '../')\n",
@@ -10051,6 +10060,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_error_naive, grid_error_dist_naive = mase_grid('benchmark_results/naive')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -10069,22 +10087,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.601632700747168"
+       "[1.0793917699500408,\n",
+       " 1.0793917699500406,\n",
+       " 1.0793917868168892,\n",
+       " 1.079391789226439,\n",
+       " 1.084613430634013]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grid_error_arima"
+    "grid_error_naive"
    ]
   },
   {
@@ -10116,6 +10138,7 @@
    "source": [
     "# create a dataframe\n",
     "grid_results = grid_error\n",
+    "grid_results.extend(grid_error_tcn)\n",
     "grid_results.extend(grid_error_tcn)\n",
     "grid_results.extend([grid_error_arima])\n",
     "grid_results"
