tbats implementation added and plotting forecasts

--- a/notebooks/benchmarks.ipynb
+++ b/notebooks/benchmarks.ipynb
@@ -665,6 +665,155 @@
    "source": [
     "model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prophet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(f'../ts_data/grid.csv', index_col=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = data.reset_index().rename(columns = {'date_str': 'DS', 'power': 'y'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DS</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-02-13 07:00:00</td>\n",
+       "      <td>12.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-02-13 08:00:00</td>\n",
+       "      <td>8.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-02-13 09:00:00</td>\n",
+       "      <td>13068.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-02-13 10:00:00</td>\n",
+       "      <td>2788.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-02-13 11:00:00</td>\n",
+       "      <td>131494.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5133</th>\n",
+       "      <td>2021-02-13 16:00:00</td>\n",
+       "      <td>255891.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5134</th>\n",
+       "      <td>2021-02-13 17:00:00</td>\n",
+       "      <td>231299.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5135</th>\n",
+       "      <td>2021-02-13 18:00:00</td>\n",
+       "      <td>255489.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5136</th>\n",
+       "      <td>2021-02-13 19:00:00</td>\n",
+       "      <td>191863.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5137</th>\n",
+       "      <td>2021-02-13 20:00:00</td>\n",
+       "      <td>92640.43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5138 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       DS          y\n",
+       "0     2020-02-13 07:00:00      12.82\n",
+       "1     2020-02-13 08:00:00       8.69\n",
+       "2     2020-02-13 09:00:00   13068.87\n",
+       "3     2020-02-13 10:00:00    2788.11\n",
+       "4     2020-02-13 11:00:00  131494.69\n",
+       "...                   ...        ...\n",
+       "5133  2021-02-13 16:00:00  255891.15\n",
+       "5134  2021-02-13 17:00:00  231299.38\n",
+       "5135  2021-02-13 18:00:00  255489.24\n",
+       "5136  2021-02-13 19:00:00  191863.39\n",
+       "5137  2021-02-13 20:00:00   92640.43\n",
+       "\n",
+       "[5138 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
